@@ -11,7 +11,8 @@ INCLUDES=$(MOZILLA_CFLAGS) -DBINDIR=\"$(bindir)/\" $(GDK_X11_CFLAGS)
 libmozsvgdec_la_SOURCES = moz-plugin.c
 libmozsvgdec_la_LDFLAGS = -module -avoid-version 
 libmozsvgdec_la_LIBADD = $(LIBRSVG_LIBS) \
-	$(LIBGSF_LIBS) $(LIBCROCO_LIBS)\
+	$(LIBGNOME_VFS_LIBS)		\
+	$(LIBGSF_LIBS) $(LIBCROCO_LIBS)	\
 	$(top_builddir)/librsvg-2.la
 
 EXTRA_DIST=moz-plugin.c
